<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

        <ImageView
            android:id="@+id/action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/menu_button_description"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/action_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.1"
            android:text="@string/feed_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/avatar_astronaut"
            android:contentDescription="@string/user_image_description" />

        <LinearLayout
            android:id="@+id/userCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userImage"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/name_1_example"
                android:textColor="@color/coral"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/post_time_example"
                android:textColor="@color/warm_gray"
                android:textSize="8sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/three_dots_menu"
            android:contentDescription="@string/three_dots_description" />

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/userImage"
            android:layout_marginTop="20dp"
            android:background="@drawable/material_image_3"
            android:contentDescription="@string/post_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/postImage"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/smaller_lorem_ipsum"
            android:textColor="@color/warm_gray"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>