<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient_header">

        <ImageView
            android:id="@+id/action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/menu_button_description"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/action_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.1"
            android:text="@string/dashboard_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:letterSpacing="0.1"
            android:text="@string/statistics_text"
            android:textAllCaps="true"
            android:textColor="@color/coral"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/graphic_description"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/january"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/warm_gray"
                android:textSize="10sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/february"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/warm_gray"
                android:textSize="10sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/march"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/warm_gray"
                android:textSize="10sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/april"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/warm_gray"
                android:textSize="10sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/may"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/warm_gray"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/friendsDashboardList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:divider="@color/pale_gray"
        android:dividerHeight="1dp"
        android:scrollbars="none"
        tools:listitem="@layout/item_friend" />


</LinearLayout>