<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:contentDescription="@string/alt_logo_icon"
        android:src="@drawable/idea" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/brand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signup"
            android:textColor="@color/coral"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login"
            android:textColor="@color/coral"
            android:textSize="14sp" />


    </LinearLayout>

</RelativeLayout>