<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/background_gradient">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:background="@color/transparent"
            android:contentDescription="@string/menu_button_description"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/profile_title"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/user_image_description"
        android:src="@drawable/avatar_diver" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/username"
        android:textColor="@color/coral"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/user_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/user_city"
        android:textAlignment="center"
        android:textColor="@color/coral"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/about_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addToFriendsButton"
        android:layout_below="@id/user_city"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/about_title"
            android:textColor="@color/coral"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_title"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="29dp"
            android:text="@string/smaller_lorem_ipsum"
            android:textAlignment="center"
            android:textColor="@color/warm_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/social_logo_sections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_centerInParent="true"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_shape"
                android:contentDescription="@string/twitter_logo_description"
                android:src="@drawable/twitter_logo" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_shape"
                android:contentDescription="@string/instagram_logo_description"
                android:src="@drawable/instagram_logo" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_shape"
                android:contentDescription="@string/facebook_logo_description"
                android:src="@drawable/facebook_logo" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_shape"
                android:contentDescription="@string/google_plus_logo_description"
                android:src="@drawable/google_plus_logo" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/social_logo_sections"
            android:layout_marginTop="20dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line"
            android:background="@color/gray"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="953"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Photos"
                    android:textAlignment="center"
                    android:textColor="@color/warm_gray"
                    android:textSize="10sp" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="58k"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Followers"
                    android:textAlignment="center"
                    android:textColor="@color/warm_gray"
                    android:textSize="10sp" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="326"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Following"
                    android:textAlignment="center"
                    android:textColor="@color/warm_gray"
                    android:textSize="10sp" />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/addToFriendsButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_to_friends_button"
        android:textColor="@color/white"
        android:textSize="14sp" />


</RelativeLayout>