<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    android:orientation="vertical"
    tools:context=".Activities.ListActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

        <ImageView
            android:id="@+id/action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/menu_button_description"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/action_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.1"
            android:text="@string/list_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/feedImage"
            android:layout_width="120dp"
            android:background="@drawable/material_image_1"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/feedImage"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/feed_example"
                android:textColor="@color/coral"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/post_time_example"
                android:textColor="@color/warm_gray"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/feedImage2"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@drawable/material_image_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedImage2"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/feed_example"
                android:textColor="@color/coral"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/post_time_example"
                android:textColor="@color/warm_gray"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feed3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/feedImage3"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/material_image_4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/feedImage3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/feed_example"
                android:textColor="@color/coral"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/post_time_example"
                android:textColor="@color/warm_gray"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>